<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.dataaccessioner</groupId>
  <artifactId>dataaccessioner</artifactId>
  <packaging>jar</packaging>
  <version>1.2-SNAPSHOT</version>

  <name>dataaccessioner</name>
  <description>Java GUI application to migrate, analyze, and generate metadata from raw files for the purposes of digital preservation</description>
  <url>https://github.com/DataAccessioner/DataAccessioner</url>

  <developers>
    <developer>
      <id>sprater</id>
      <name>Scott Prater</name>
      <email>sprater@gmail.com</email>
    </developer>
    <developer>
      <id>seth-shaw</id>
      <name>Seth Shaw</name>
      <email>seth.e.shaw@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/DataAccessioner/DataAccessioner</url>
    <connection>scm:git:git://github.com/DataAccessioner/aataaccessioner.git</connection>
    <developerConnection>scm:git:git@github.com:DataAccessioner/dataaccessioner.git</developerConnection>
  </scm>

  <properties>
    <java.version>11</java.version>
    <java.target>11</java.target>
    <maven.enforcer.plugin>3.3.0</maven.enforcer.plugin>
    <maven.version.range>[3.9,)</maven.version.range>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <start-class>org.dataaccessioner.DataAccessioner</start-class>

    <!-- plugin dependency versions -->
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
    <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
    <maven-install-plugin.version>3.1.1</maven-install-plugin.version>

    <!-- core dependency versions -->
    <beansbinding.version>1.2.1</beansbinding.version>
    <netbeans.version>RELEASE180</netbeans.version>
    <tika.version>2.8.0</tika.version>
    <fast-md5.version>2.7.1</fast-md5.version>
    <log4j.version>2.20.0</log4j.version>
    <jdom2.version>2.0.6.1</jdom2.version>

    <!-- FITS dependency versions.  These must match the versions of the jars in the FITS lb/ directory -->
    <fits.version>1.6.0</fits.version>
    <droid.version>6.5.2</droid.version>

    <!-- test dependency versions -->
    <testng.version>7.8.0</testng.version>
  </properties>


  <dependencies>

    <!-- core dependencies -->
    <dependency>
      <groupId>org.jdesktop</groupId>
      <artifactId>beansbinding</artifactId>
      <version>${beansbinding.version}</version>
    </dependency>
    <dependency>
      <groupId>org.netbeans.api</groupId>
      <artifactId>org-netbeans-swing-outline</artifactId>
      <version>${netbeans.version}</version>
    </dependency>
    <dependency>
      <groupId>org.netbeans.api</groupId>
      <artifactId>org-openide-util</artifactId>
      <version>${netbeans.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.tika</groupId>
      <artifactId>tika-app</artifactId>
      <version>${tika.version}</version>
    </dependency>
    <dependency>
      <groupId>com.joyent.util</groupId>
      <artifactId>fast-md5</artifactId>
      <version>${fast-md5.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jdom</groupId>
      <artifactId>jdom2</artifactId>
      <version>${jdom2.version}</version>
    </dependency>

    <!-- FITS dependencies -->
    <dependency>
      <groupId>edu.harvard.huit.lts</groupId>
      <artifactId>fits</artifactId>
      <version>${fits.version}</version>
    </dependency>
    <dependency>
      <groupId>uk.gov.nationalarchives</groupId>
      <artifactId>droid-core</artifactId>
      <version>${droid.version}</version>
    </dependency>
    <dependency>
      <groupId>uk.gov.nationalarchives</groupId>
      <artifactId>droid-core-interfaces</artifactId>
      <version>${droid.version}</version>
    </dependency>
    <dependency>
      <groupId>uk.gov.nationalarchives</groupId>
      <artifactId>droid-command-line</artifactId>
      <version>${droid.version}</version>
    </dependency>
    <dependency>
      <groupId>uk.gov.nationalarchives</groupId>
      <artifactId>droid-results</artifactId>
      <version>${droid.version}</version>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-surefire-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven-jar-plugin.version}</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Class-Path>fits/lib fits/tools fits/xml fits/xml/nlnz</Class-Path>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${maven-shade-plugin.version}</version>
        <executions>
          <!-- Run shade goal on package phase -->
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <!-- add Main-Class to manifest file -->
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>org.dataaccessioner.DataAccessioner</mainClass>
                </transformer>
              </transformers>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                    <exclude>fits/lib/**</exclude>
                    <exclude>fits/tools/**</exclude>
                    <exclude>fits/xml/**</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>${maven-assembly-plugin.version}</version>
        <configuration>
          <descriptors>
            <descriptor>src/assembly/assembly.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>${maven-install-plugin.version}</version>
        <executions>
          <execution>
            <id>install-fits</id>
            <configuration>
              <groupId>edu.harvard.huit.lts</groupId>
              <artifactId>fits</artifactId>
              <version>${fits.version}</version>
              <packaging>jar</packaging>
              <file>fits/lib/fits-${fits.version}.jar</file>
              <generatePom>true</generatePom>
            </configuration>
            <goals>
              <goal>install-file</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
